No need of --add-opens for ArrowLanguage anymore